--- a/style.css
+++ b/style.css
@@ -47,3 +47,18 @@ header .btn:hover{
     background: #006A50;
     color: #fff;
 }
+
+main{
+    height: 100%;
+    width: 1600px;
+}
+
+section{
+    width: 1280px;
+}
+
+.banner{
+    width: 100%;
+    height: 560px;
+    border-radius: 24px;
+}
