--- a/style.css
+++ b/style.css
@@ -574,7 +574,7 @@ section{
     align-items: center;
 }
 
-.last .divider{
+.last .dividor{
     border: 1px solid #a0a0a0;
     width: 1280px;
     margin-top: 32px;
