--- a/style.css
+++ b/style.css
@@ -84,7 +84,7 @@ section{
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding: 0 100px 0 60px;
+    padding: 100px 80px;
 }
 
 .banner .text{
