--- a/style.css
+++ b/style.css
@@ -11,6 +11,7 @@ body{
     display: flex;
     align-items: center;
     justify-content: center;
+    background: #f5f5f5;
 }
 
 body::-webkit-scrollbar{
@@ -265,6 +266,7 @@ section{
     padding: 48px 24px;
     border-radius: 16px;
     margin-top: 32px;
+    background: white;
 }
 
 .future .text p{
@@ -351,7 +353,7 @@ section{
     align-items: center;
     justify-content: center;
     padding: 10px 16px;
-    border: 2px solid #0e0e0e;
+    border: 1px solid #0e0e0e;
     cursor: pointer;
     transition: .3s;
 }
