--- a/style.css
+++ b/style.css
@@ -193,6 +193,7 @@ section{
     width: 410px;
     border-radius: 16px;
     padding: 32px;
+    position: relative;
 }
 
 .future .cards .card img{
